[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi!!!! David!!!!1
+            Hi!!!!AP Iduvai!!!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
