[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi!!!!AP Iduvai!!!!
+         HII this is Aswin_J
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
