[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,17 +1,66 @@
-<!doctype html>
 <html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-         HII this is Aswin_J
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
+<head>
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
+</head>
+<body>
+<center><h2>Mark sheet</h2></center>
+<p>Name of the student: V.Javagal Aswin</p>
+<p>Department: Cse</p>
+<p>semester: 1st</p>
+
+<table>
+  <tr>
+    <th>Subject Name</th>
+    <th>Grade</th>
+    <th>Percentage</th>
+  </tr>
+  <tr>
+    <td>Engineering physics</td>
+    <td>O</td>
+    <td>90-100%</td>
+  </tr>
+  <tr>
+    <td>English</td>
+    <td>A</td>
+    <td>80-90%</td>
+  </tr>
+  <tr>
+    <td>Maths</td>
+    <td>A+</td>
+    <td>90-100)</td>
+  </tr>
+  <tr>
+    <td>Problem solving techniques</td>
+    <td>A</td>
+    <td>80-90%</td>
+  </tr>
+  <tr>
+    <td>Fundamentals of computer</td>
+    <td>O</td>
+    <td>90-100%</td>
+  </tr>
+  <tr>
+    <td>Electronic devices and circuits</td>
+    <td>A+</td>
+    <td>80-90%</td>
+  </tr>
+</table>
+</br><p>Over all percentage:93%</p>
+</body>
 </html>
