--- a/ui/index.html
+++ b/ui/index.html
@@ -61,6 +61,6 @@ tr:nth-child(even) {
     <td>80-90%</td>
   </tr>
 </table>
-</br><p>Over all percentage:93%</p>
+</br><center></center><p>Over all percentage:93%</center></p>
 </body>
 </html>
