[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,66 +1,10 @@
 <html>
-<head>
-<style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-</style>
-</head>
-<body>
-<center><h2>Mark sheet</h2></center>
-<p>Name of the student: V.Javagal Aswin</p>
-<p>Department: Cse</p>
-<p>semester: 1st</p>
-
-<table>
-  <tr>
-    <th>Subject Name</th>
-    <th>Grade</th>
-    <th>Percentage</th>
-  </tr>
-  <tr>
-    <td>Engineering physics</td>
-    <td>O</td>
-    <td>90-100%</td>
-  </tr>
-  <tr>
-    <td>English</td>
-    <td>A</td>
-    <td>80-90%</td>
-  </tr>
-  <tr>
-    <td>Maths</td>
-    <td>A+</td>
-    <td>90-100)</td>
-  </tr>
-  <tr>
-    <td>Problem solving techniques</td>
-    <td>A</td>
-    <td>80-90%</td>
-  </tr>
-  <tr>
-    <td>Fundamentals of computer</td>
-    <td>O</td>
-    <td>90-100%</td>
-  </tr>
-  <tr>
-    <td>Electronic devices and circuits</td>
-    <td>A+</td>
-    <td>80-90%</td>
-  </tr>
-</table>
-</br><center><p>Over all percentage:93%</center></p>
-</body>
+    <head>
+        <title>
+            aswin webpage
+        </title>
+    </head>
+    <body>
+        <a><href="https://javagalaswin28.wixsite.com/karpagam">sfvsfvvsvs</href>Pls click here</a>
+    </body>
 </html>
