--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        <a><href="https://javagalaswin28.wixsite.com/karpagam">sfvsfvvsvs</href>Pls click here</a>
+        <a href="https://javagalaswin28.wixsite.com/karpagam">sfvsfvvsvsPls click here</a>
     </body>
 </html>
